--- a/css/gallery.css
+++ b/css/gallery.css
@@ -191,6 +191,304 @@
     left: 0px;
     z-index: 1;
   }
+  .content-otherpages .content-grid #services-overview {
+    display: flex;
+    width: 80%;
+    align-self: center;
+    justify-self: center;
+    background-image: url("https://dsm01pap009files.storage.live.com/y4mBa2_21eNctcvjoEH04CQePxHeqS9AIp4ZpUdOX6DDOqKlTvjsNVrEIHuZ7y8XevcTDJ_WaaeDUwwVAJM4Ts_ZwZEegzcEa--ernPNGjpgqau4HrDKrOx2WwDaR8n5nCCZ3Go17weKG01W0kFoLpfnyAQE04HTmhdWOVzJTvS61VcPfnqqbBwxyaC6Q6pysra?width=1477&height=372&cropmode=none");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: #F1ECE8;
+    height: 20vh;
+  }
+  .content-otherpages .content-grid #services-overview #services-contact {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .content-otherpages .content-grid #services-overview #services-contact #sidetext {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    margin-left: 2vw;
+  }
+  .content-otherpages .content-grid #services-overview #services-contact #sidetext h2 {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 800;
+    font-size: 2.5vw;
+    text-align: center;
+    font-variant: all-small-caps;
+    color: #FFFFFF;
+    margin: 0 0 0.75vw 0;
+  }
+  .content-otherpages .content-grid #services-overview #services-contact #sidetext div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .content-otherpages .content-grid #services-overview #services-contact #sidetext div img {
+    width: 1vw;
+    height: 2vw;
+    margin-right: 1vw;
+  }
+  .content-otherpages .content-grid #services-overview #services-contact #sidetext div p {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.5vw;
+    font-variant: all-small-caps;
+    color: #B4DE4A;
+    margin: 0;
+    line-height: 99.187%;
+  }
+  .content-otherpages .content-grid .services-list {
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    height: 100vh;
+    align-content: center;
+    align-self: center;
+    justify-self: center;
+  }
+  .content-otherpages .content-grid .services-list #sidepic {
+    height: 100%;
+    width: 30%;
+    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218544&authkey=%21AAFBi3XnwgB2fgA&width=524&height=1186");
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  .content-otherpages .content-grid .services-list #list-services {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 0px;
+    width: 70%;
+    background-color: rgb(68, 98, 88);
+  }
+  .content-otherpages .content-grid .services-list #list-services .services-list-item {
+    height: 33.33vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
+  .content-otherpages .content-grid .services-list #list-services .services-list-item img {
+    width: 5vw;
+    height: 5vw;
+  }
+  .content-otherpages .content-grid .services-list #list-services .services-list-item .services-item-text {
+    margin-left: 2vw;
+    width: 20vw;
+    margin-right: 5vw;
+  }
+  .content-otherpages .content-grid .services-list #list-services .services-list-item .services-item-text h3 {
+    color: #B4DE4A;
+    font-size: 1.5vw;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 600;
+    font-variant: all-small-caps;
+    margin-bottom: 0.5vw;
+    margin-top: 0;
+  }
+  .content-otherpages .content-grid .services-list #list-services .services-list-item .services-item-text ul {
+    padding-top: 0.5vw;
+    border-top: 3px solid #B4DE4A;
+    list-style-type: circle;
+    list-style-position: outside;
+  }
+  .content-otherpages .content-grid .services-list #list-services .services-list-item .services-item-text ul li {
+    color: #FFF;
+    font-size: 0.85vw;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+  }
+  .content-otherpages .content-grid .services-list #list-services #garden-list-item {
+    background-color: #1F382B;
+  }
+  .content-otherpages .content-grid .services-list #list-services #design-list-item {
+    background-color: #264132;
+  }
+  .content-otherpages .content-grid .services-list #list-services #tree-list-item {
+    background-color: #315148;
+  }
+  .content-otherpages .content-grid #question-header {
+    background-color: #2C2C2C;
+    width: 80%;
+    justify-self: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    height: 20vw;
+  }
+  .content-otherpages .content-grid #question-header h3 {
+    color: #B4DE4A;
+    font-family: "Roboto";
+    font-size: 1.5vw;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 95.187%;
+    font-variant: all-small-caps;
+    letter-spacing: 0.25vw;
+  }
+  .content-otherpages .content-grid #question-header ol {
+    width: 60%;
+  }
+  .content-otherpages .content-grid #question-header ol li {
+    color: #FFF;
+    font-family: "Roboto";
+    font-size: 1.2vw;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 95.187%;
+    font-variant: all-small-caps;
+    padding-top: 1vw;
+    padding-bottom: 1vw;
+    letter-spacing: 0.1vw;
+  }
+  .content-otherpages .content-grid #questionnaire {
+    display: flex;
+    width: 80%;
+    align-self: center;
+    justify-self: center;
+    align-content: center;
+    margin-bottom: 5vw;
+    background-color: white;
+  }
+  .content-otherpages .content-grid #questionnaire #edef3681-fa9e-4070-b2be-fc23075d9115 {
+    width: 100% !important;
+    background-color: white;
+    margin-top: 5vw;
+  }
+  .content-otherpages .content-grid #testimonials {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(68, 98, 88);
+    justify-self: center;
+    align-self: center;
+    z-index: 99;
+    width: 100%;
+    height: 60vh;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+    margin-bottom: 1vw;
+  }
+  .content-otherpages .content-grid #testimonials h2 {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 900;
+    font-size: 3vw;
+    text-align: center;
+    font-variant: all-small-caps;
+    color: #B4DE4A;
+    background-color: #233E30;
+    height: 12vh;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
+    z-index: 98;
+    margin: 0;
+    transition: 1s all ease;
+  }
+  .content-otherpages .content-grid #testimonials #testimonials-carousel-arrows {
+    width: 100%;
+    z-index: 95;
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .content-otherpages .content-grid #testimonials #testimonials-carousel-arrows #testimonials-leftdiv {
+    background-color: rgba(0, 0, 0, 0.8);
+    height: 50vh;
+    width: 10vh;
+    left: 0px;
+    z-index: 98;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .content-otherpages .content-grid #testimonials #testimonials-carousel-arrows #testimonials-leftdiv #testimonials-leftarrow {
+    height: 5vw;
+    cursor: pointer;
+    transition: 0.2s all ease;
+    visibility: hidden;
+  }
+  .content-otherpages .content-grid #testimonials #testimonials-carousel-arrows #testimonials-rightdiv {
+    background-color: rgba(0, 0, 0, 0.8);
+    height: 50vh;
+    width: 10vh;
+    margin: 0;
+    position: absolute;
+    right: 15vw;
+    z-index: 98;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .content-otherpages .content-grid #testimonials #testimonials-carousel-arrows #testimonials-rightdiv #testimonials-rightarrow {
+    height: 5vw;
+    cursor: pointer;
+    transition: 0.2s all ease;
+    visibility: visible;
+  }
+  .content-otherpages .content-grid #testimonials #testimonials-carousel-image-container {
+    width: 70vw;
+    height: 62vh;
+    background-color: transparent;
+    overflow: hidden;
+    z-index: 1;
+    position: absolute;
+    left: 15vw;
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .content-otherpages .content-grid #testimonials #testimonials-carousel-image-container #testimonials-img-window {
+    height: 100%;
+    width: 70vw;
+    position: absolute;
+    top: 12vh;
+  }
+  .content-otherpages .content-grid #testimonials #testimonials-carousel-image-container #testimonials-img-window #testimonials1 {
+    background-image: url("https://dsm01pap009files.storage.live.com/y4mogC_GhqGDJzq5Ws1T4RbF77j9M4Q6yM0NZia4z4UvKXJSL3EwpkryKausBy52hIlyix7Y9jwsF9V0GD6MSpv12X27_lkRACRBcPnqiqG0ZE4f6t6BtWh2AJ7bmje7sw3wvzNi4qTtp7lc_MjB8dfM6hYpdlCIIi7KFOS7W0YRfUKeeRabpjzTpmYp-QEEeMH?width=4032&height=3024&cropmode=none");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 70vw;
+    height: 50vh;
+    position: absolute;
+    left: 0;
+    top: 0;
+    transition: 2s all ease;
+  }
+  .content-otherpages .content-grid #testimonials #testimonials-carousel-image-container #testimonials-img-window #testimonials2 {
+    background-image: url("https://dsm01pap009files.storage.live.com/y4mP155ex3lzt3kT5onTO-ZWUc2rEjgsl2MBpFink4PaNC6vRtwSWupUwEMNJBv62U5t-htF09knRhN3IsFcKTNPPM5pPiD-R7zJ17hht-MPLyJp9vaRT2_GWST_8_iw_XxnvwqILSR5Tkic62h5BDzTf-8H0CGxA4kO2iQ7Rpwo16wD95zNLlfTL8wsgsCHutG?width=4032&height=3024&cropmode=none");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 70vw;
+    height: 50vh;
+    position: absolute;
+    left: 70vw;
+    top: 0;
+    transition: 2s all ease;
+  }
+  .content-otherpages .content-grid #testimonials #testimonials-carousel-image-container #testimonials-img-window #testimonials3 {
+    background-image: url("https://dsm01pap009files.storage.live.com/y4m5CjeVXzVBvCvgDqjWC6I3XkN-BUPoBZq-3bOl6PJG3PsRSILnN2WWqe3wJcFd07BIBUsveZ4mQgr0awFWB1e_9LssAK2-X_J9v3hHc5PdC6uU_gktEkmdxmddQ76EKeXf7JaIWv26pQmWifCaV-rZGxooCCpU4pQkqJV82JfJ73WNThCH0O4Il3pSmg3ZtUe?width=3469&height=2647&cropmode=none");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 70vw;
+    height: 50vh;
+    position: absolute;
+    left: 140vw;
+    top: 0;
+    transition: 2s all ease;
+  }
   .content-otherpages .content-grid #carousel {
     display: flex;
     flex-direction: column;
@@ -198,9 +496,10 @@
     justify-self: center;
     align-self: center;
     z-index: 99;
+    width: 100%;
     box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
   }
-  .content-otherpages .content-grid #carousel h2 {
+  .content-otherpages .content-grid #carousel #whitetitle {
     font-family: "Roboto";
     font-style: normal;
     font-weight: 900;
@@ -208,6 +507,21 @@
     text-align: center;
     font-variant: all-small-caps;
     color: white;
+    background-color: #2C2C2C;
+    height: 12vh;
+    padding-top: 3vh;
+    z-index: 98;
+    margin: 0;
+    transition: 1s all ease;
+  }
+  .content-otherpages .content-grid #carousel #greentitle {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 900;
+    font-size: 3vw;
+    text-align: center;
+    font-variant: all-small-caps;
+    color: #B4DE4A;
     background-color: #2C2C2C;
     height: 12vh;
     padding-top: 3vh;
@@ -223,7 +537,7 @@
     flex-direction: row;
   }
   .content-otherpages .content-grid #carousel #carousel-arrows #leftdiv {
-    background-color: rgba(0, 0, 0, 0.8);
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.8) 30%, rgba(0, 0, 0, 0));
     height: 50vh;
     width: 10vh;
     left: 0px;
@@ -240,7 +554,7 @@
     visibility: hidden;
   }
   .content-otherpages .content-grid #carousel #carousel-arrows #rightdiv {
-    background-color: rgba(0, 0, 0, 0.8);
+    background: linear-gradient(-90deg, rgba(0, 0, 0, 0.8) 30%, rgba(0, 0, 0, 0.459) 80%, rgba(0, 0, 0, 0));
     height: 50vh;
     width: 10vh;
     margin: 0;
@@ -361,9 +675,25 @@
     gap: 1vw;
     background-color: white;
     padding-top: 3vh;
-    padding-bottom: 25vw;
+    padding-bottom: 3vw;
     padding-left: 1vw;
     padding-right: 1vw;
+  }
+  .content-otherpages .content-grid .project-image-gallery {
+    display: flex;
+    flex-direction: column;
+    gap: 1vw;
+    background-color: white;
+    padding-top: 3vh;
+    padding-bottom: 3vw;
+    padding-left: 1vw;
+    padding-right: 1vw;
+  }
+  .content-otherpages .content-grid .project-image-gallery .project {
+    display: flex;
+    flex-direction: column;
+    gap: 1vw;
+    width: 100%;
   }
   .content-otherpages .content-grid .image-gallery .column {
     display: flex;
