--- a/css/gallery.scss
+++ b/css/gallery.scss
@@ -212,16 +212,207 @@ $GaiaGrey: #2C2C2C;
                 left:0px;
                 z-index: 1;
             }
-            #carousel{
+
+            ///Services Overview Page
+
+            #services-overview{
+                display:flex;
+                width:80%;
+                align-self: center;
+                justify-self: center;
+                background-image: url("https://dsm01pap009files.storage.live.com/y4mBa2_21eNctcvjoEH04CQePxHeqS9AIp4ZpUdOX6DDOqKlTvjsNVrEIHuZ7y8XevcTDJ_WaaeDUwwVAJM4Ts_ZwZEegzcEa--ernPNGjpgqau4HrDKrOx2WwDaR8n5nCCZ3Go17weKG01W0kFoLpfnyAQE04HTmhdWOVzJTvS61VcPfnqqbBwxyaC6Q6pysra?width=1477&height=372&cropmode=none");
+                background-size: contain;
+                background-repeat: no-repeat;
+                background-color:#F1ECE8;
+                height:20vh;
+                #services-contact{
+                    display:flex;
+                    flex-direction: row;
+                    align-items: center;    
+                    
+                    #sidetext{
+                        display:flex;
+                        flex-direction: column;
+                        align-items: start;
+                        margin-left:2vw;
+                        h2{
+                            font-family: 'Roboto';
+                            font-style: normal;
+                            font-weight: 800;
+                            font-size: 2.5vw;
+                            text-align: center;
+                            font-variant: all-small-caps;
+                            color: #FFFFFF;
+                            margin:0 0 .75vw 0;
+                        }
+                        div{
+                            display:flex;
+                            flex-direction: row;
+                            align-items: center;
+                            img{
+                                width: 1vw;
+                                height: 2vw;
+                                margin-right: 1vw;
+                            }
+                            p{
+                                font-family: 'Roboto';
+                                font-style: normal;
+                                font-weight: 400;
+                                font-size: 1.5vw;
+                                font-variant: all-small-caps;
+                                color: #B4DE4A;
+                                margin:0;
+                                line-height: 99.187%;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .services-list{
+                display:flex;
+                flex-direction: row;
+                width:80%;
+                height:100vh;
+                align-content: center;
+                align-self: center;
+                justify-self: center;
+                #sidepic{
+                    height:100%;
+                    width:30%;
+                    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218544&authkey=%21AAFBi3XnwgB2fgA&width=524&height=1186");
+                    background-size: cover;
+                    background-repeat: no-repeat;
+                }
+                #list-services{
+                    display:grid;
+                    grid-template-rows:1fr 1fr 1fr;
+                    gap:0px;
+                    width:70%;
+                    background-color: $GaiaDarkGreen;
+                    
+                    .services-list-item{
+                        height:33.33vh;
+                        width:100%;
+                        display: flex;
+                        align-items: center;
+                        flex-direction:row;
+                        justify-content: flex-end;
+
+                        img{
+                            width:5vw;
+                            height:5vw;
+                        }
+                        .services-item-text{
+                            margin-left: 2vw;
+                            width: 20vw;
+                            margin-right: 5vw;
+                            h3{
+                                color: #B4DE4A;
+                                font-size: 1.5vw;
+                                font-family: 'Roboto';
+                                font-style: normal;
+                                font-weight: 600;
+                                font-variant: all-small-caps;
+                                margin-bottom: .5vw;
+                                margin-top:0;
+                            }
+                            ul{
+                                padding-top: .5vw;
+                                border-top: 3px solid $GaiaLightGreen;
+                                list-style-type: circle;
+                                list-style-position: outside;
+                                li{
+                                    color: #FFF;
+                                    font-size: .85vw;
+                                    font-family: 'Roboto';
+                                    font-style: normal;
+                                    font-weight: 300;
+                                    line-height: normal;
+                                }
+                            }
+                        }
+                    }
+                    
+                    #garden-list-item{
+                        background-color:#1F382B;
+                    }
+                    #design-list-item{
+                        background-color: #264132;
+                    }
+                    #tree-list-item{
+                        background-color: #315148;
+                    }
+                }
+            }
+            #question-header{
+                background-color:$GaiaGrey;
+                width: 80%;
+                justify-self: center;
                 display:flex;
                 flex-direction: column;
-                background-color: #2C2C2C;
+                justify-content: center;
+                justify-items: center;
+                align-items: center;
+                height:20vw;
+
+
+                h3{
+                    color: #B4DE4A;
+                    font-family: "Roboto";
+                    font-size: 1.5vw;
+                    font-style: normal;
+                    font-weight: 900;
+                    line-height: 95.187%;
+                    font-variant: all-small-caps;
+                    letter-spacing: .25vw;
+                }
+                ol{
+                    width:60%;
+                    li{
+                        color: #FFF;
+                        font-family: "Roboto";
+                        font-size: 1.2vw;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: 95.187%;
+                        font-variant: all-small-caps;
+                        padding-top: 1vw;
+                        padding-bottom: 1vw;
+                        letter-spacing: .1vw;
+                        
+                    }
+                }
+
+            }
+            #questionnaire{
+                display:flex;
+                width:80%;
+                align-self: center;
+                justify-self: center;
+                align-content: center;
+                margin-bottom:5vw;
+                background-color: white;
+
+                #edef3681-fa9e-4070-b2be-fc23075d9115{
+                    width:100% !important;
+                    background-color: white;
+                    margin-top: 5vw;
+                }
+            }
+
+            #testimonials{
+                display:flex;
+                flex-direction: column;
+                background-color:$GaiaDarkGreen;
                 justify-self: center;
                 align-self: center;
                 z-index: 99;
+                width: 100%;
+                height:60vh;
                 box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+                margin-bottom: 1vw;
                         
-                
                 
                 h2{
                     font-family: 'Roboto';
@@ -230,7 +421,154 @@ $GaiaGrey: #2C2C2C;
                     font-size: 3vw;
                     text-align: center;
                     font-variant: all-small-caps;
+                    color: $GaiaLightGreen;
+                    background-color: #233E30;
+                    height: 12vh;
+                    margin-top: 3vh;
+                    margin-bottom: 3vh;
+                    z-index: 98;
+                    margin: 0;
+                    transition: 1s all ease;
+                }
+                #testimonials-carousel-arrows{
+                    width:100%;
+                    z-index:95;
+                    display: grid;
+                    grid-template-columns: 1fr;
+
+                    #testimonials-leftdiv{
+                        background-color: rgba(0, 0, 0, 0.8);
+                        height:50vh;
+                        width:10vh;
+                        left:0px;
+                        z-index:98;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                        #testimonials-leftarrow{
+                            height:5vw;
+                            cursor: pointer;
+                            transition: 0.2s all ease;
+                            visibility: hidden;
+                        }
+                    }
+                    #testimonials-rightdiv{
+                        background-color: rgba(0, 0, 0, 0.8);
+                        height:50vh;
+                        width:10vh;
+                        margin:0;
+                        position: absolute;
+                        right: 15vw;
+                        z-index:98;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                        #testimonials-rightarrow{
+                            height:5vw;
+                            cursor: pointer;
+                            transition: 0.2s all ease;
+                            visibility: visible;
+                        }
+                    }
+                }
+                #testimonials-carousel-image-container{
+                    width: 70vw;
+                    height:62vh;
+                    background-color: transparent;
+                    overflow: hidden;
+                    z-index:1;
+                    position: absolute;
+                    left:15vw;
+                    display: grid;
+                    grid-template-columns: 1fr;
+                    
+                        #testimonials-img-window{
+                            height:100%;
+                            width: 70vw;
+                            position: absolute;
+                            top:12vh;
+                            #testimonials1{
+                                background-image: url("https://dsm01pap009files.storage.live.com/y4mogC_GhqGDJzq5Ws1T4RbF77j9M4Q6yM0NZia4z4UvKXJSL3EwpkryKausBy52hIlyix7Y9jwsF9V0GD6MSpv12X27_lkRACRBcPnqiqG0ZE4f6t6BtWh2AJ7bmje7sw3wvzNi4qTtp7lc_MjB8dfM6hYpdlCIIi7KFOS7W0YRfUKeeRabpjzTpmYp-QEEeMH?width=4032&height=3024&cropmode=none");
+                                background-size: cover;
+                                background-repeat: no-repeat;
+                                background-position: center;
+                                width: 70vw;
+                                height:50vh;
+                                position: absolute;
+                                left:0;
+                                top:0;
+                                transition:2s all ease;
+                            }
+                            #testimonials2{
+                                background-image: url("https://dsm01pap009files.storage.live.com/y4mP155ex3lzt3kT5onTO-ZWUc2rEjgsl2MBpFink4PaNC6vRtwSWupUwEMNJBv62U5t-htF09knRhN3IsFcKTNPPM5pPiD-R7zJ17hht-MPLyJp9vaRT2_GWST_8_iw_XxnvwqILSR5Tkic62h5BDzTf-8H0CGxA4kO2iQ7Rpwo16wD95zNLlfTL8wsgsCHutG?width=4032&height=3024&cropmode=none");
+                                background-size: cover;
+                                background-repeat: no-repeat;
+                                background-position: center;
+                                width: 70vw;
+                                height:50vh;
+                                position: absolute;
+                                left:70vw;
+                                top: 0;
+                                transition:2s all ease;
+                            }
+                            #testimonials3{
+                                background-image: url("https://dsm01pap009files.storage.live.com/y4m5CjeVXzVBvCvgDqjWC6I3XkN-BUPoBZq-3bOl6PJG3PsRSILnN2WWqe3wJcFd07BIBUsveZ4mQgr0awFWB1e_9LssAK2-X_J9v3hHc5PdC6uU_gktEkmdxmddQ76EKeXf7JaIWv26pQmWifCaV-rZGxooCCpU4pQkqJV82JfJ73WNThCH0O4Il3pSmg3ZtUe?width=3469&height=2647&cropmode=none");
+                                background-size: cover;
+                                background-repeat: no-repeat;
+                                background-position: center;
+                                width: 70vw;
+                                height:50vh;
+                                position: absolute;
+                                left:140vw;
+                                top: 0;
+                                transition:2s all ease;
+                            }
+                        }
+                        
+                }
+            }
+
+
+            ///Gallery Page
+            
+            #carousel{
+                display:flex;
+                flex-direction: column;
+                background-color: #2C2C2C;
+                justify-self: center;
+                align-self: center;
+                z-index: 99;
+                width: 100%;
+                box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+                        
+                
+                
+                #whitetitle{
+                    font-family: 'Roboto';
+                    font-style: normal;
+                    font-weight: 900;
+                    font-size: 3vw;
+                    text-align: center;
+                    font-variant: all-small-caps;
                     color: white;
+                    background-color: $GaiaGrey;
+                    height: 12vh;
+                    padding-top: 3vh;
+                    z-index: 98;
+                    margin: 0;
+                    transition: 1s all ease;
+                }
+
+                #greentitle{
+                    font-family: 'Roboto';
+                    font-style: normal;
+                    font-weight: 900;
+                    font-size: 3vw;
+                    text-align: center;
+                    font-variant: all-small-caps;
+                    color: $GaiaLightGreen;
                     background-color: $GaiaGrey;
                     height: 12vh;
                     padding-top: 3vh;
@@ -246,7 +584,7 @@ $GaiaGrey: #2C2C2C;
                     flex-direction: row;
 
                     #leftdiv{
-                        background-color: rgba(0, 0, 0, 0.8);
+                        background: linear-gradient(90deg,rgba(0, 0, 0, 0.8) 30%, rgba(0, 0, 0, 0));
                         height:50vh;
                         width:10vh;
                         left:0px;
@@ -263,7 +601,7 @@ $GaiaGrey: #2C2C2C;
                         }
                     }
                     #rightdiv{
-                        background-color: rgba(0, 0, 0, 0.8);
+                        background: linear-gradient(-90deg,rgba(0, 0, 0, 0.8) 30%, rgba(0, 0, 0, 0.459) 80%, rgba(0, 0, 0, 0));
                         height:50vh;
                         width:10vh;
                         margin:0;
@@ -390,11 +728,29 @@ $GaiaGrey: #2C2C2C;
                 gap: 1vw;
                 background-color: white;
                 padding-top:3vh;
-                padding-bottom: 25vw;
+                padding-bottom: 3vw;
                 padding-left: 1vw;
                 padding-right: 1vw;
             }
             
+            .project-image-gallery {
+                display: flex;
+                flex-direction: column;
+                gap: 1vw;
+                background-color: white;
+                padding-top:3vh;
+                padding-bottom: 3vw;
+                padding-left: 1vw;
+                padding-right: 1vw;
+            }
+
+            .project-image-gallery .project{
+                display: flex;
+                flex-direction: column;
+                gap: 1vw;
+                width:100%;
+            } 
+
             .image-gallery .column {
                 display: flex;
                 flex-direction: column;
@@ -444,6 +800,5 @@ $GaiaGrey: #2C2C2C;
         }
         }
     }
-    
 }
 
