--- a/css/main.scss
+++ b/css/main.scss
@@ -1130,6 +1130,7 @@ $GaiaGrey: #2C2C2C;
                     text-align: center;
                     z-index:99;
                     padding-top: 1vh;
+                    text-shadow: 3px 4px 7px rgba(32, 32, 32, 0.8);
                 }
             }
         }
@@ -1261,18 +1262,19 @@ $GaiaGrey: #2C2C2C;
                             p{
                                     font-family: 'Roboto';
                                     font-weight: 200;
-                                    font-size: 1.1vw;
-                                    line-height: 23.64px; 
+                                    font-size: 1.2vw;
+                                    line-height: 130%; 
                                     color: #FFFFFF;
                                     text-align: center;
                                     padding-top:20px;
-                                    border-top: 3px solid $GaiaLightGreen;
+                                    border-top: 2px solid $GaiaLightGreen;
                             }
+                            
                         }
                         #row2{
-                            display: grid;
-                            grid-template-columns: 1fr 1fr 1fr;
-                            width:80%;
+                            display: flex;
+                            flex-direction: row;
+                            width:100%;
                             margin-left:20px;
                             margin-right:20px;
                             justify-self: center;
@@ -1291,23 +1293,27 @@ $GaiaGrey: #2C2C2C;
                                     font-family: 'Roboto';
                                     font-style: normal;
                                     font-weight: 600;
-                                    font-size: 1.2vw;
+                                    font-size: 1.5vw;
                                     line-height: 100%;
                                     text-align: center;
                                     font-variant: all-small-caps;
                                     color:$GaiaLightGreen;
-                                    margin-top: 10px;
+                                    margin-top: 1vw;
                                     margin-bottom:0px;
+                                    padding-left: 2vw;
+                                    padding-right: 2vw;
                                 }
                                 p{
                                     font-family: 'Roboto';
                                     font-weight: 200;
-                                    font-size: .9vw;
-                                    line-height: 20.64px; 
+                                    font-size: 1.1vw;
+                                    line-height: 120%; 
                                     color: #FFFFFF;
                                     text-align: center;
                                     margin-top: 1vw;
-                                    width:fit-content;
+                                    width:18vw;
+                                    padding-left: 2vw;
+                                    padding-right: 2vw;
                                 }
                             }
                         }
