--- a/css/main.scss
+++ b/css/main.scss
@@ -1159,7 +1159,7 @@ $GaiaGrey: #2C2C2C;
                 background-repeat: no-repeat;
                 background-position: center;
                 background-size: cover;
-                background-image: url("https://dsm01pap009files.storage.live.com/y4m5-sZVzELoDtrlWPnmgwg8kZcqURc3qvyDpOa-ZSKELt7ncK1_MjLZ_shDijWjXhnM4oEd-ORKS3Q86-8s3IC92Qb0gC14MP3Xs9Ec4F_S47sW1KdTqXuorH-0gcWm1Qgz7IXQOBxY3mCgwuA75f-xpTcfbSTK8fvxGGErAaX0_gBgzBp_VIKBvdinAPWJkjn?width=1923&height=969&cropmode=none");
+                background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218928&authkey=%21ACQGgm4hSO0W8Kw&width=1923&height=969");
             }
             #page2_image{
                 position: absolute;
@@ -1170,7 +1170,7 @@ $GaiaGrey: #2C2C2C;
                 background-repeat: no-repeat;
                 background-position: center;
                 background-size: cover;
-                background-image: url("https://dsm01pap009files.storage.live.com/y4mROmUcAqSF7Ib96glE4OLQeK7vjhcm_sJkBqxbVgvVJE2JbS4YBgpVpAlXUt_TiTXSTxqLbWggvckuZgKfKjnBbbmG3YEcdi8zGG_L64a4S2u01Hj2IXU4aoK7alfhtW2s-Vl1k0U421Qtz9m7bgzTaoi4xNCN6MdK-wIHDIvoad2FEpaJp4ruoYdy7g4z0Tr?width=1923&height=969&cropmode=none");
+                background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218945&authkey=%21ANOnX3tIMdao29k&width=1000&height=572");
             }
             #page3_image{
                 position: absolute;
