--- a/css/gallery.css
+++ b/css/gallery.css
@@ -217,7 +217,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218817&authkey=%21AEqvEqvfqpNJ0OU&width=1000&height=572");
+    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218945&authkey=%21ANOnX3tIMdao29k&width=1000&height=572");
   }
   .content-otherpages #servicesbanner #text1 {
     position: absolute;
@@ -582,7 +582,7 @@
     width: max-content;
   }
   .content-otherpages .content-grid #carousel #carousel-image-container #img-window #img1 {
-    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218863&authkey=%21AGwdausPwbjwn_c&width=4032&height=3024");
+    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218947&authkey=%21AB1Qh04as1rQ2TA&width=1920&height=1440");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -594,7 +594,7 @@
     transition: 2s all ease;
   }
   .content-otherpages .content-grid #carousel #carousel-image-container #img-window #img2 {
-    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218068&authkey=%21AG1t6EBBuvpa51U&width=3024&height=4032");
+    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218937&authkey=%21AOdy5b469STyz9c&width=1221&height=1628");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -606,7 +606,7 @@
     transition: 2s all ease;
   }
   .content-otherpages .content-grid #carousel #carousel-image-container #img-window #img3 {
-    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218864&authkey=%21APdT52DZglnkaA4&width=997&height=725");
+    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218866&authkey=%21APNppxyABeuv5hM&width=688&height=810");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
