--- a/css/gallery.scss
+++ b/css/gallery.scss
@@ -240,7 +240,7 @@ $GaiaGrey: #2C2C2C;
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
-            background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218817&authkey=%21AEqvEqvfqpNJ0OU&width=1000&height=572");
+            background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218945&authkey=%21ANOnX3tIMdao29k&width=1000&height=572");
             #text1{
                 position:absolute;
                 left: 10%;
@@ -619,7 +619,7 @@ $GaiaGrey: #2C2C2C;
                             height:50vh;
                             width: max-content;
                             #img1{
-                                background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218863&authkey=%21AGwdausPwbjwn_c&width=4032&height=3024");
+                                background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218947&authkey=%21AB1Qh04as1rQ2TA&width=1920&height=1440");
                                 background-size: cover;
                                 background-repeat: no-repeat;
                                 background-position: center;
@@ -631,7 +631,7 @@ $GaiaGrey: #2C2C2C;
                                 transition:2s all ease;
                             }
                             #img2{
-                                background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218068&authkey=%21AG1t6EBBuvpa51U&width=3024&height=4032");
+                                background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218937&authkey=%21AOdy5b469STyz9c&width=1221&height=1628");
                                 background-size: cover;
                                 background-repeat: no-repeat;
                                 background-position: center;
@@ -643,7 +643,7 @@ $GaiaGrey: #2C2C2C;
                                 transition:2s all ease;
                             }
                             #img3{
-                                background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218864&authkey=%21APdT52DZglnkaA4&width=997&height=725");
+                                background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218866&authkey=%21APNppxyABeuv5hM&width=688&height=810");
                                 background-size: cover;
                                 background-repeat: no-repeat;
                                 background-position: center;
