--- a/css/main.css
+++ b/css/main.css
@@ -287,7 +287,7 @@ html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218817&authkey=%21AEqvEqvfqpNJ0OU&width=1000&height=572");
+    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218945&authkey=%21ANOnX3tIMdao29k&width=1000&height=572");
   }
   .content-otherpages #servicesbanner #text1 {
     position: absolute;
@@ -652,7 +652,7 @@ html {
     width: max-content;
   }
   .content-otherpages .content-grid #carousel #carousel-image-container #img-window #img1 {
-    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218863&authkey=%21AGwdausPwbjwn_c&width=4032&height=3024");
+    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218947&authkey=%21AB1Qh04as1rQ2TA&width=1920&height=1440");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -664,7 +664,7 @@ html {
     transition: 2s all ease;
   }
   .content-otherpages .content-grid #carousel #carousel-image-container #img-window #img2 {
-    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218068&authkey=%21AG1t6EBBuvpa51U&width=3024&height=4032");
+    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218937&authkey=%21AOdy5b469STyz9c&width=1221&height=1628");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -676,7 +676,7 @@ html {
     transition: 2s all ease;
   }
   .content-otherpages .content-grid #carousel #carousel-image-container #img-window #img3 {
-    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218864&authkey=%21APdT52DZglnkaA4&width=997&height=725");
+    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218866&authkey=%21APNppxyABeuv5hM&width=688&height=810");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -1883,7 +1883,7 @@ html {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-image: url("https://dsm01pap009files.storage.live.com/y4m5-sZVzELoDtrlWPnmgwg8kZcqURc3qvyDpOa-ZSKELt7ncK1_MjLZ_shDijWjXhnM4oEd-ORKS3Q86-8s3IC92Qb0gC14MP3Xs9Ec4F_S47sW1KdTqXuorH-0gcWm1Qgz7IXQOBxY3mCgwuA75f-xpTcfbSTK8fvxGGErAaX0_gBgzBp_VIKBvdinAPWJkjn?width=1923&height=969&cropmode=none");
+    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218928&authkey=%21ACQGgm4hSO0W8Kw&width=1923&height=969");
   }
   .main-body #background #page2_image {
     position: absolute;
@@ -1894,7 +1894,7 @@ html {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-image: url("https://dsm01pap009files.storage.live.com/y4mROmUcAqSF7Ib96glE4OLQeK7vjhcm_sJkBqxbVgvVJE2JbS4YBgpVpAlXUt_TiTXSTxqLbWggvckuZgKfKjnBbbmG3YEcdi8zGG_L64a4S2u01Hj2IXU4aoK7alfhtW2s-Vl1k0U421Qtz9m7bgzTaoi4xNCN6MdK-wIHDIvoad2FEpaJp4ruoYdy7g4z0Tr?width=1923&height=969&cropmode=none");
+    background-image: url("https://onedrive.live.com/embed?resid=B81A9B7983F88386%218945&authkey=%21ANOnX3tIMdao29k&width=1000&height=572");
   }
   .main-body #background #page3_image {
     position: absolute;
