--- a/css/main.css
+++ b/css/main.css
@@ -133,6 +133,69 @@ html {
     z-index: 98;
     transition: 0.4s all ease;
   }
+  .overlay-project-container {
+    display: grid;
+    opacity: 0;
+    visibility: hidden;
+    grid-template-columns: 1fr;
+    width: 100vw;
+    height: 100vh;
+    top: 0px;
+    left: 0px;
+    position: fixed;
+    z-index: 99;
+    transition: 0.8s all ease;
+  }
+  .overlay-project-container .overlay-project {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-self: center;
+    align-self: center;
+    width: 90vw;
+    height: 98vh;
+    z-index: 99;
+    background-color: white;
+    box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+  }
+  .overlay-project-container .overlay-project .projectx {
+    position: absolute;
+    z-index: 99;
+    display: block;
+    top: 10vh;
+    right: 10vw;
+    width: 2vw;
+    height: 2vw;
+    opacity: 1;
+    transition: 0.4s all ease;
+  }
+  .overlay-project-container .overlay-project .projectx:hover {
+    cursor: pointer;
+    opacity: 0.6;
+  }
+  .overlay-project-container .overlay-project .project-content {
+    width: 50%;
+    height: 90%;
+    padding: 30px;
+    align-self: center;
+    justify-self: center;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+  .overlay-project-container .overlay-project .project-content h2 {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 900;
+    font-size: 3vw;
+    text-align: center;
+    font-variant: all-small-caps;
+    color: #2C2C2C;
+    color: #2C2C2C;
+    height: 12vh;
+    padding-top: 3vh;
+    z-index: 98;
+    margin: 0;
+  }
   #alternate-nav-header {
     display: grid;
     position: absolute;
@@ -886,38 +949,41 @@ html {
     left: 0px;
     top: 0px;
     z-index: 99;
-    flex-direction: row;
-    background-image: url("https://dsm01pap009files.storage.live.com/y4mxtardiGUtDY3kgODSqZqoILtOsaT3ZU6mSkxMH5Zxd605WfUc0u-CHrkdSZMRZ1QwaOiUOVYixA11vlfFMxn3DRW0pliiLhSjS0jMtzmnkkk_cE72w6AkCGnxeFiiaBBGGogMiiXU-z2u3h5N8P_tuUgISdvUbXR8Mxedp_OSCrdlCxPid5NXh8pi4w294CS?width=1915&height=139&cropmode=none");
-    background-size: cover;
-    background-position: left;
-    background-repeat: no-repeat;
+    flex-direction: column;
+    background-color: #2E443E;
     width: 100vw;
     height: 20vw;
+    justify-content: center;
+    margin-bottom: 20vw;
   }
-  .main-body .top-bar #gaia-logo-top {
+  .main-body .top-bar #hamburger {
     align-self: center;
-    height: 15vw;
-    padding-left: 3vw;
   }
   .main-body #main-nav-header {
-    display: grid;
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
     position: absolute;
+    justify-content: center;
+    align-items: center;
     top: 20vw;
     left: 0px;
     z-index: 99;
     width: 100vw;
+    height: 90vh;
+    background-color: #2E443E;
+    opacity: 1;
   }
   .main-body #main-nav-header #main-nav ul {
     display: grid;
     width: 100%;
+    height: 50vh;
     grid-template-columns: 1fr;
     justify-self: center;
     align-self: center;
     justify-items: center;
     list-style-type: none;
-    padding: none;
-    background-color: rgb(68, 98, 88);
+    padding: 0;
+    margin-top: 20vw;
   }
   .main-body #main-nav-header #main-nav ul .non-drop a {
     color: white;
@@ -927,7 +993,7 @@ html {
     font-family: "Roboto", sans-serif;
     text-transform: uppercase;
     font-weight: 400;
-    font-size: 0.9vw;
+    font-size: 20px;
     transition: 0.4s all ease;
   }
   .main-body #main-nav-header #main-nav ul .non-drop a:hover {
@@ -942,56 +1008,15 @@ html {
   }
   .main-body #main-nav-header #main-nav ul #dropdown #dropdown-btn {
     color: white;
-    justify-self: center;
-    align-self: center;
     text-decoration: none;
     font-family: "Roboto", sans-serif;
     text-transform: uppercase;
     font-weight: 400;
-    font-size: 0.9vw;
+    font-size: 20px;
     transition: 0.4s all ease;
-  }
-  .main-body #main-nav-header #main-nav ul #dropdown #dropdown-btn:hover {
-    color: #B4DE4A;
-    font-size: 0.95vw;
-    font-weight: 500;
   }
   .main-body #main-nav-header #main-nav ul #dropdown #dropdown-content {
-    display: grid;
-    height: 0px;
-    width: 100%;
-    opacity: 0;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: 1fr;
-    align-items: center;
-    background-color: #1C312A;
-    padding: 0px;
-    transition: 0.4s all ease;
-  }
-  .main-body #main-nav-header #main-nav ul #dropdown #dropdown-content a {
-    transition: 0.4s all ease;
-    text-decoration: none;
-    font-family: "Roboto", sans-serif;
-    text-transform: uppercase;
-    font-weight: 400;
-    font-size: small;
-    padding: 10px;
-    text-align: center;
-    color: white;
-    opacity: 0;
-  }
-  .main-body #main-nav-header #main-nav ul #dropdown:hover #dropdown-content {
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    height: 10vw;
-    width: 100%;
-    opacity: 100%;
-  }
-  .main-body #main-nav-header #main-nav ul #dropdown:hover #dropdown-content a {
-    opacity: 1;
-  }
-  .main-body #main-nav-header #main-nav ul #dropdown:hover #dropdown-content a:hover {
-    color: #B4DE4A;
+    display: none;
   }
   .main-body .splash {
     position: absolute;
@@ -1011,7 +1036,7 @@ html {
     margin: 0;
     max-height: 60vh;
     margin: 0;
-    z-index: 99;
+    z-index: 98;
     align-items: center;
     width: 80vw;
   }
@@ -1038,116 +1063,60 @@ html {
     z-index: 99;
     padding-top: 1vh;
   }
-  .main-body .splash .splash-items .call-now-mobile {
-    display: flex;
-    flex-direction: column;
-    width: 60vw;
-    height: 40vw;
-    align-items: center;
-    justify-content: center;
-    background: rgba(68, 98, 88, 0.5);
-    border-radius: 3%;
-  }
-  .main-body .splash .splash-items .call-now-mobile p {
-    font-family: "Roboto";
-    font-weight: 200;
-    font-size: 4vw;
-    line-height: 170%;
-    color: #FFFFFF;
-    text-align: center;
-    margin-top: 1vw;
-    width: 40%;
-  }
-  .main-body .splash .splash-items .call-now-mobile .call-now-btn-mobile {
-    text-decoration: none;
-  }
-  .main-body .splash .splash-items .call-now-mobile .call-now-btn-mobile div {
-    background-color: #B4DE4A;
-    border-radius: 15%;
-    width: 13vw;
-    height: 8vw;
-    display: flex;
-    flex-direction: column;
-    margin-left: 0.5vw;
-    transition: 0.4s all ease;
-    align-items: center;
-    justify-content: center;
-  }
-  .main-body .splash .splash-items .call-now-mobile .call-now-btn-mobile div img {
-    width: 6vw;
-    transition: 0.4s all ease;
-    transform: rotate(0);
-  }
-  .main-body .splash .splash-items .call-now-mobile .call-now-btn-mobile:hover div {
-    background-color: #bff82e;
-    box-shadow: 0 0.1em 0.5em 0.1em #2C2C2C;
-  }
-  .main-body .splash .splash-items .call-now-mobile .call-now-btn-mobile:hover div img {
-    transform: rotate(0.5turn);
-  }
-  .main-body #background {
+  .main-body #mobile-background {
     position: absolute;
+    display: grid;
+    grid-template-columns: 1fr;
     left: 0px;
     top: 0vw;
     width: 100vw;
     height: 100vh;
-    z-index: 3;
-    background-color: #1C312A;
+    background-color: #D0D7CF;
+    overflow-y: auto;
+    overflow-x: hidden;
+    perspective: 10px;
   }
-  .main-body #background #page1_image {
+  .main-body #mobile-background #treescontainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform-style: preserve-3d;
+    z-index: -1;
+  }
+  .main-body #mobile-background #mobile-logo {
+    align-self: center;
+    justify-self: center;
+  }
+  .main-body #mobile-background #treesforeground {
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
     width: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-image: url("https://dsm01pap009files.storage.live.com/y4m5-sZVzELoDtrlWPnmgwg8kZcqURc3qvyDpOa-ZSKELt7ncK1_MjLZ_shDijWjXhnM4oEd-ORKS3Q86-8s3IC92Qb0gC14MP3Xs9Ec4F_S47sW1KdTqXuorH-0gcWm1Qgz7IXQOBxY3mCgwuA75f-xpTcfbSTK8fvxGGErAaX0_gBgzBp_VIKBvdinAPWJkjn?width=1923&height=969&cropmode=none");
+    -o-object-fit: cover;
+       object-fit: cover;
+    z-index: -1;
   }
-  .main-body #background #page2_image {
+  .main-body #mobile-background #treesmiddle {
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
     width: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-image: url("https://dsm01pap009files.storage.live.com/y4mROmUcAqSF7Ib96glE4OLQeK7vjhcm_sJkBqxbVgvVJE2JbS4YBgpVpAlXUt_TiTXSTxqLbWggvckuZgKfKjnBbbmG3YEcdi8zGG_L64a4S2u01Hj2IXU4aoK7alfhtW2s-Vl1k0U421Qtz9m7bgzTaoi4xNCN6MdK-wIHDIvoad2FEpaJp4ruoYdy7g4z0Tr?width=1923&height=969&cropmode=none");
+    z-index: -2;
+    -o-object-fit: cover;
+       object-fit: cover;
+    transform: scale(1.5) translateZ(-5px);
   }
-  .main-body #background #page3_image {
+  .main-body #mobile-background #treesbg {
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
     width: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-image: url("https://dsm01pap009files.storage.live.com/y4mqZR-3nrJBXOx1Szrp3acvr9MbxSFoIsk6DCKnIP8lyTbaJY-X07l28Qe0HvYcvyANb9QL7Oqdq5oRchKUBzcXU72wJhGsSrzTR0weZmCK_aTxcW28yaMT0ogmd7IW4epNuIOKwHEDk2N1__C_11R_4YIcHLN9GB7l6LKVpzTCEXEq9PEzQYRNvef8ts7P8Ya?width=1923&height=969&cropmode=none");
-  }
-  .main-body #background #page4_image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-image: url("https://dsm01pap009files.storage.live.com/y4mphVHysaC7zQ5VsTB9OmMVWrp1DZ1hgkKo4VjUuk4XVdGnbT-xnrlAGbYMoksZRqRHN793iNqoDQWQKNTyoYqR5QqRFzvTHnaI2DX3fiyDudRRRX3TQnjYPm3hapH8nMUUzEBnNNyobkmOaIj2Mn0ijvdb2uh7bZlda-zjBBe-E6j7lyK9Dz0z4Fr3hM_Dg_q?width=1923&height=969&cropmode=none");
-  }
-  .main-body #background #page5_image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-image: url("https://dsm01pap009files.storage.live.com/y4mbV_ZWLBzt_htLCj_ZIGzJb8L9qrluyV3tmjcX3lxQwnCh5rgawd-39iRJN4N1NVcmyP5929-51RUZn77fUGeukXzjvwr1uzMvsHtJbYNS0Y05-vfP7g9J9dVVBCX3K3YmVFVy36tgMS-_v2OYyYIe2qCZGf-sRIovcXorU9mhpYopfZy_2-FFvbv_vZhhFZ4?width=6000&height=4000&cropmode=none");
+    -o-object-fit: cover;
+       object-fit: cover;
+    transform: scale(2) translateZ(-10px);
   }
   .main-body .content {
     position: relative;
