--- a/css/main.scss
+++ b/css/main.scss
@@ -152,7 +152,7 @@ $GaiaGrey: #2C2C2C;
             width: 100vw;
             height: 90vh;
             background-color: #2E443E;
-            opacity: 1;
+            
             #main-nav ul{
                 display: grid;
                 width:100%;
@@ -164,6 +164,7 @@ $GaiaGrey: #2C2C2C;
                 list-style-type: none;
                 padding:0;
                 margin-top: 20vw;
+                visibility: visible;
                 
                 .non-drop{
                     a{
@@ -203,55 +204,6 @@ $GaiaGrey: #2C2C2C;
             }
         }
 
-        .splash{
-            position:absolute;
-            background-color: #1C312A;
-            left:0px;
-            top:0vw;
-            width:100vw;
-            height:100vh;
-            display:flex;
-            justify-content: center;
-            align-content: center;
-
-            .splash-items{
-                display:flex;
-                flex-direction: column;
-                align-self: center;
-                margin:0;
-                max-height: 60vh;
-                margin:0;
-                z-index:98;
-                align-items: center;
-                width:80vw;
-                
-                .large-title{
-                    font-family: 'Aref Ruqaa', serif;
-                    text-transform: uppercase;
-                    color: $GaiaLightGreen;
-                    font-weight: 700;
-                    font-size: 13vw;
-                    text-align: center;
-                    margin:0;
-                    line-height: 110%;
-                    z-index:99;
-                }
-                
-                .large-subhead{
-                    font-family: 'Roboto', sans-serif;
-                    font-weight: 300;
-                    line-height: 120%;
-                    font-size: 4.5vw;
-                    letter-spacing: 0.05em;
-                    text-transform: uppercase;
-                    color:white;
-                    text-align: center;
-                    z-index:99;
-                    padding-top: 1vh;
-                }
-            }
-        }
-
         #mobile-background{
             position:absolute;
             display: grid;
@@ -270,19 +222,52 @@ $GaiaGrey: #2C2C2C;
                 justify-content: center;
                 transform-style: preserve-3d;
                 z-index:-1;
+                
             }
             #mobile-logo{
                 align-self:center;
                 justify-self: center;
+                z-index:-2;
             }
+            #mobile-splash{
+            position: absolute;
+            top: 130vh;
+            z-index:-2;
+            width:100%;
+            display:flex;
+            justify-content: center;
+            
+                h3{
+                    font-family: 'Roboto', sans-serif;
+                    font-weight: 300;
+                    line-height: 120%;
+                    font-size: 4.5vw;
+                    letter-spacing: 0.05em;
+                    text-transform: uppercase;
+                    color:white;
+                    text-align: center;
+                    z-index:99;
+                    padding-top: 1vh;
+                    width:80%;
+                }
+            }
+
             #treesforeground{
                 position: absolute;
+                display:flex;
+                flex-direction:column;
                 top:0;
                 left:0;
                 height: 100%;
                 width: 100%;
                 object-fit: cover;
                 z-index: -1;
+                transform:scale(1.5) translateZ(-5px);
+                padding: 0;
+                img{
+                    width:100%;
+                    
+                }
             }
             #treesmiddle{
                 position: absolute;
@@ -290,9 +275,9 @@ $GaiaGrey: #2C2C2C;
                 left:0;
                 height: 100%;
                 width: 100%;
-                z-index:-2;
                 object-fit: cover;
-                transform: scale(1.5) translateZ(-5px);
+                transform:scale(1.75) translateZ(-7.5px);
+                
             }
             #treesbg{
                 position: absolute;
@@ -302,11 +287,12 @@ $GaiaGrey: #2C2C2C;
                 width: 100%;
                 object-fit: cover;
                 transform: scale(2) translateZ(-10px);
+                
             }
         }
         .content{
             position: relative;
-            margin-top:100vh;
+            margin-top:87vh;
             background-color: $GaiaDarkGreen;
             width: 100vw;
             display: grid;
@@ -338,10 +324,10 @@ $GaiaGrey: #2C2C2C;
                     width: 95%;
                     justify-self: center;
                     margin-top: 4vw;
-                    #side-image1{
+                    #side-image1-mobile{
                         width: 100%;
                         align-self: center;
-                        padding:10vw;
+                        padding:0vw;
                     }
                     #two-row-container1{
                         display: flex;
@@ -437,13 +423,10 @@ $GaiaGrey: #2C2C2C;
 
                 #item3{
                     display: flex;
-                    flex-direction: row;
-                    background-image:url("https://dsm01pap009files.storage.live.com/y4maBrMSD_vYe_m8D3Nr69Pniplc2J1CqscH3AByoGi2F-N-3t6R6VOWtasNtIkz1gTW7CvQmlzv1xxHWyxzlP-5BuAI9ZRuPQvpTVegxPwoOtRTvWxAYFSK8OGCmYwX3xEsqHfjszAjFrvU7yA8piXpUIkfuoFupeaT5h9J-hM7v2b3izyubtZiiBGiMigoAlc?width=1468&height=930&cropmode=none");
-                    background-position: bottom center;
-                    background-size:cover;
-                    background-repeat: no-repeat;
-                    width: 70vw;
-                    height:45vw;
+                    flex-direction: column;
+                    background-color: white;
+                    width: 100vw;
+                    height:100vh;
                     align-items: center;
                     justify-items: center;
                     align-content: center;
@@ -496,8 +479,7 @@ $GaiaGrey: #2C2C2C;
                         }
                     }
                     img{
-                        width:30%;
-                        box-shadow: 0px 4px 4px 7px rgba(0, 0, 0, 0.25);
+                        width:100%;
                     }
                 }
                 #item4{
